--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-
+pyecharts>=1.17.1
+streamlit>=1.26.0
+pandas>=2.1.1
+streamlit_echarts>=0.3.0
+jieba>=0.42.1
+stopwordsiso>=0.2
+wordcloud>=1.9.2
+snownlp>=1.3.0
+scikit-learn>=1.3.0
+matplotlib>=3.8.0
+numpy>=1.26.0
+opencv-python>=4.9.0.80
+tqdm>=4.66.1
