--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ streamlit_echarts>=0.3.0
 jieba>=0.42.1
 stopwordsiso>=0.2
 wordcloud>=1.9.2
-snownlp>=1.3.0
+snownlp==0.12.3  # 降低版本要求
 scikit-learn>=1.3.0
 matplotlib>=3.8.0
 numpy>=1.26.0
